Doc: Include hdf5 functions in Python API doc
* requires libhdf5 on RTD
* exclude developer info from API doc
* minor other doc fixes

--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# SBML import, observation model, sensitivity analysis, data export and visualization\n",
     "\n",
-    "This is an example using the [model_steadystate_scaled.sbml] model to demonstrate:\n",
+    "This is an example using the [model_steadystate_scaled.xml] model to demonstrate:\n",
     "\n",
     "* SBML import\n",
     "* specifying the observation model\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "The provided measurements can be visualized together with the simulation results by passing the `Expdata` to `amici.plotting.plot_observable_trajectories`:"
+   "source": "The provided measurements can be visualized together with the simulation results by passing the `ExpData` to `amici.plotting.plot_observable_trajectories`:"
   },
   {
    "cell_type": "code",
